--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -461,88 +461,60 @@ ul.social
       margin: 0 25px 10px 10px
 
 
-.shopping_cart
-  display: none
-  position: fixed
-  top: 0
-  left: 0
-  right: 0
-  bottom: 0
-  z-index: 500
-  background: transparent url("/assets/linen.jpg") top left repeat
-  .container
-    position: absolute
-    top: 0
-    left: 50%
-    margin-left: -470px
-    bottom: 0
-    a.btn
-      width: 100% !important
-      margin-bottom: 5px
-      box-sizing: border-box
-      &:hover
-        color: #ffffff !important
-    a.btn-default
-      color: #333333 !important
-    a
-      color: #ffffff !important
-      &:hover
-        color: #91c113 !important
-    .shopping_box
-      position: absolute
-      top: 0
-      left: 0
-      right: 0
-      bottom: 0
-      h4.title
+.shopping_cart_content
+  div
+    .one_cart
+      border-bottom: 1px solid rgb(204, 204, 204)
+      margin-bottom: 20px
+      .row
+        h3
+          border-bottom: 1px solid rgb(204, 204, 204)
+          margin-bottom: 25px
+          line-height: 0
+          position: relative
+          span
+            background: rgb(242, 242, 242)
+            padding-right: 15px
 
-        color:  #ffffff !important
-        span
-          strong
-      .shopping_box_inner
-        position: absolute
-        top: 25px
-        left: 0
-        right: 0
-        bottom: 135px
-        overflow-y: hidden
-        .row.overview
-          overflow: hidden
-          width: 5000px
-          .span3
-            .block_content
-              .products_list.text_block
-                p.obj_info_mini
-                  font-size: 12px
-                  span:first-child
-                    width: 60px
-                .coll_change
-                  span
-                    i
-                      cursor: pointer
-                      margin-top: -2px
-                    .coll
-                      font-size: 16px
-
-      .shopping_box_tottal
-        position: absolute
-        left: 0
-        right: 0
-        bottom: 80px
-        border-top: 2px solid rgb(221, 221, 221)
-        p
-          float: right
-          font-size: 18px
-          color: #ffffff
-          padding-top: 10px
-
-      .shopping_box_footer
-        position: absolute
-        left: 0
-        right: 0
-        bottom: 5px
-        text-align: center
-
+          .icon_box
+            position: absolute
+            right: 0
+            top:  -6px
+            background: rgb(242, 242, 242)
+            i
+              float: right
+              margin-left: 15px
+              cursor: pointer
+      p.label
+        clear: both
+      ul.thumbnails.row
+        li
+          margin-bottom: 0
+        li.span2
+          a.thumbnail
+        li.span4
+          ul.thumbnails.row
+            li
+              margin-bottom: 13px
+              a.thumbnail
+              p
+                margin-bottom: -6px
+                span
+                  color: rgb(145, 193, 19) !important
+        li.span1
+          button.btn.btn-block
+            margin-bottom: 10px
+          input.span1
+            margin-bottom: 10px
+            text-align: center
+            font-weight: bold
+        li.span3
+          h3
+            line-height: 31px
+            border: none
+            text-align: center
+            padding: 0
+            margin: 39px 0
 .overview
   .slide_el
     float: left
@@ -597,9 +569,163 @@ p.price span.red
   .disable
     display: none
 
+.filter_top
+  margin-top: 20px
+#main-menu ul.nav > li:hover
+  background-color: transparent !important
+#main-menu ul.nav > li > a
+  span
+    color: rgb(145, 193, 19) !important
+
 .noSelect
   user-select: none
   -o-user-select: none
   -moz-user-select: none
   -khtml-user-select: none
   -webkit-user-select: none
+
+
+.width_300
+  width: 400px
+  height: 40px
+  span.nna
+    float: left
+    margin-top: 10px
+    display: block
+  .layout-slider
+    width: 260px
+    float: right
+    margin-top: 18px
+.jslider_round
+  .jslider-bg i
+    background-image: url(/assets/jslider.round.plastic.png)
+  .jslider-pointer
+    background-image: url(/assets/jslider.round.plastic.png)
+    width: 17px
+    height: 17px
+    top: -6px
+    margin-left: -8px
+.jslider
+  .jslider-bg i, .jslider-pointer
+    background-image: url(/assets/jslider.round.plastic.png)
+  display: block
+  width: 100%
+  height: 1em
+  position: relative
+  top: 0.6em
+  font-family: Arial, sans-serif
+  table
+    width: 100%
+    border-collapse: collapse
+    border: 0
+  td, th
+    padding: 0
+    vertical-align: top
+    text-align: left
+    border: 0
+  table
+    width: 100%
+    vertical-align: top
+    tr
+      width: 100%
+      vertical-align: top
+      td
+        width: 100%
+        vertical-align: top
+  .jslider-bg
+    position: relative
+    i
+      height: 5px
+      position: absolute
+      font-size: 0
+      top: 0
+    .l
+      width: 10%
+      background-position: 0 0
+      left: 0
+    .f
+      width: 80%
+      left: 10%
+      background-repeat: repeat-x
+      background-position: 0 -20px
+    .r
+      width: 10%
+      left: 90%
+      background-position: right 0
+    .v
+      position: absolute
+      width: 60%
+      left: 20%
+      top: 0
+      height: 5px
+      background-repeat: repeat-x
+      background-position: 0 -40px
+  .jslider-pointer
+    width: 13px
+    height: 15px
+    background-position: -2px -62px
+    position: absolute
+    left: 20%
+    top: -4px
+    margin-left: -6px
+    cursor: pointer
+    cursor: hand
+  .jslider-pointer-hover
+    background-position: -22px -62px
+  .jslider-pointer-to
+    left: 80%
+  .jslider-label
+    font-size: 9px
+    line-height: 12px
+    color: black
+    opacity: 0.4
+    white-space: nowrap
+    padding: 0px 2px
+    position: absolute
+    top: -18px
+    left: 0px
+  .jslider-label-to
+    left: auto
+    right: 0
+  .jslider-value
+    font-size: 9px
+    white-space: nowrap
+    padding: 1px 2px 0
+    position: absolute
+    top: -19px
+    left: 20%
+    background: white
+    line-height: 12px
+    -moz-border-radius: 2px
+    -webkit-border-radius: 2px
+    -o-border-radius: 2px
+    border-radius: 2px
+  .jslider-value-to
+    left: 80%
+  .jslider-label small, .jslider-value small
+    position: relative
+    top: -0.4em
+  .jslider-scale
+    position: relative
+    top: 9px
+    span
+      position: absolute
+      height: 5px
+      border-left: 1px solid #999
+      font-size: 0
+    ins
+      font-size: 9px
+      text-decoration: none
+      position: absolute
+      left: 0px
+      top: 5px
+      color: #999
+
+.jslider-single
+  .jslider-pointer-to, .jslider-value-to, .jslider-bg .v
+    display: none
+
+.jslider-limitless .jslider-label
+  display: none
+
+
