--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,200 +7,7 @@
     = csrf_meta_tags
   %body
     .container
-      .shopping_cart
-        .container
-          .shopping_box
-            %h4.title
-              %span
-                Корзина
-            .shopping_box_inner.viewport
-              .row.overview
 
-                .span3
-                  .block_content
-                    .products_list.text_block
-                      %h4.title
-                        %span.pull-left
-                          %i.icon-book
-                          %strong Название шкафа
-                      %div
-                        %p.obj_img
-                          %span.sale
-                            %img{:alt => "", :src => "/assets/sale.png"}
-                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
-                        %p.obj_info_mini
-                          %span
-                            Цена:
-                          %span.cena
-                            12 000
-                        %p.obj_info_mini
-                          %span
-                            Размеры:
-                          %span
-                            220 x 220 x 220
-                        %p.obj_info_mini
-                          %span
-                            Декор:
-                          %span
-                            Красивая ткань
-                        %p.obj_info_mini.coll_change
-                          %span
-                            Колл:
-                          %span
-                            %i.icon-minus
-                            %span.coll 1
-                            %i.icon-plus
-                .span3
-                  .block_content
-                    .products_list.text_block
-                      %h4.title
-                        %span.pull-left
-                          %i.icon-book
-                          %strong Название шкафа
-                      %div
-                        %p.obj_img
-                          %span.sale
-                            %img{:alt => "", :src => "/assets/sale.png"}
-                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
-                        %p.obj_info_mini
-                          %span
-                            Цена:
-                          %span.cena
-                            12 000
-                        %p.obj_info_mini
-                          %span
-                            Размеры:
-                          %span
-                            220 x 220 x 220
-                        %p.obj_info_mini
-                          %span
-                            Декор:
-                          %span
-                            Красивая ткань
-                        %p.obj_info_mini.coll_change
-                          %span
-                            Колл:
-                          %span
-                            %i.icon-minus
-                            %span.coll 1
-                            %i.icon-plus
-                .span3
-                  .block_content
-                    .products_list.text_block
-                      %h4.title
-                        %span.pull-left
-                          %i.icon-book
-                          %strong Название шкафа
-                      %div
-                        %p.obj_img
-                          %span.sale
-                            %img{:alt => "", :src => "/assets/sale.png"}
-                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
-                        %p.obj_info_mini
-                          %span
-                            Цена:
-                          %span.cena
-                            12 000
-                        %p.obj_info_mini
-                          %span
-                            Размеры:
-                          %span
-                            220 x 220 x 220
-                        %p.obj_info_mini
-                          %span
-                            Декор:
-                          %span
-                            Красивая ткань
-                        %p.obj_info_mini.coll_change
-                          %span
-                            Колл:
-                          %span
-                            %i.icon-minus
-                            %span.coll 1
-                            %i.icon-plus
-                .span3
-                  .block_content
-                    .products_list.text_block
-                      %h4.title
-                        %span.pull-left
-                          %i.icon-book
-                          %strong Название шкафа
-                      %div
-                        %p.obj_img
-                          %span.sale
-                            %img{:alt => "", :src => "/assets/sale.png"}
-                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
-                        %p.obj_info_mini
-                          %span
-                            Цена:
-                          %span.cena
-                            12 000
-                        %p.obj_info_mini
-                          %span
-                            Размеры:
-                          %span
-                            220 x 220 x 220
-                        %p.obj_info_mini
-                          %span
-                            Декор:
-                          %span
-                            Красивая ткань
-                        %p.obj_info_mini.coll_change
-                          %span
-                            Колл:
-                          %span
-                            %i.icon-minus
-                            %span.coll 1
-                            %i.icon-plus
-                .span3
-                  .block_content
-                    .products_list.text_block
-                      %h4.title
-                        %span.pull-left
-                          %i.icon-book
-                          %strong Название шкафа
-                      %div
-                        %p.obj_img
-                          %span.sale
-                            %img{:alt => "", :src => "/assets/sale.png"}
-                          %img{:alt => "", :src => "https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcT2SVoUu9_ohsYS4DQh8GuXl2f0AyGoEu7gMSTp1MRumZWzJjkkfQ", :width => "100%"}
-                        %p.obj_info_mini
-                          %span
-                            Цена:
-                          %span.cena
-                            12 000
-                        %p.obj_info_mini
-                          %span
-                            Размеры:
-                          %span
-                            220 x 220 x 220
-                        %p.obj_info_mini
-                          %span
-                            Декор:
-                          %span
-                            Красивая ткань
-                        %p.obj_info_mini.coll_change
-                          %span
-                            Колл:
-                          %span
-                            %i.icon-minus
-                            %span.coll 1
-                            %i.icon-plus
-            .scrollbar
-              .track
-                .thumb
-                  .end
-            .shopping_box_tottal
-              %p
-                ИТОГО: 15 500 р
-            .shopping_box_footer
-              %a.btn.btn-success{:href => "javascript:;"}
-                Оформить заказ
-              %a{:href => "javascript:;"}
-                Заказать звонок
-              .clear
-              %a.shop_cart_close{:href => "javascript:;"}
-                Закрыть
       #top-bar.row
         .span4.logo
           %a{:href => "/"}
@@ -220,7 +27,7 @@
               |
             %li
               .basket
-                %a.scl{:href => "javascript:;"}
+                %a.scl{:href => "/shopping_box/index"}
                   %i.icon-shopping-cart
                   Корзина
                   %span
@@ -261,7 +68,7 @@
                         Контакты
 
                     %li.shopping_cart_link.pull-right.hide
-                      %a.scl{:href => "javascript:;"}
+                      %a.scl{:href => "/shopping_box/index"}
                         %i.icon-shopping-cart.icon-white
                         Корзина
                         %span
