--- a/app/views/admin/_menu.html.haml
+++ b/app/views/admin/_menu.html.haml
@@ -1,29 +1,28 @@
 %ul.nav
-  %li.active
+  %li
     %a{:href => "/"}
       %i.icon-home
 
-  %li.dropdown
+  %li.dropdown{:class => params[:controller] == "admin" ? "active" : ""}
     %a.dropdown-toggle{:href => "/admin"}
       Заказы
 
-  %li.dropdown
+  %li.dropdown{:class => ["companies", "categories", "products"].include?(params[:controller].to_s) ? "active" : ""}
     %a.dropdown-toggle{:href => "/admin/companies"}
       Каталог
-      %b.caret
-    %ul.dropdown-menu
+      -#%b.caret
+    -#%ul.dropdown-menu
       %li
         %a{:href => "products.html"} Шкафы
       %li
         %a{:href => "products.html"} Столы
       %li
         %a{:href => "products.html"} Кресла
+
   %li.dropdown
     %a.dropdown-toggle{:href => "/special/index"}
       Акции и спецпредложения
-  %li.dropdown
-    %a.dropdown-toggle{:href => "/contact/index"}
-      Контакты
+
   %li.search_form.pull-right
     %form.navbar-search{:method => "POST"}
       %input.icon-search{:type => 'submit', :value => ""}
