--- a/app/views/admin/products/_form.html.haml
+++ b/app/views/admin/products/_form.html.haml
@@ -26,18 +26,37 @@
     .controls
       = file_field_tag "product_photo[]", :multiple => true
       = hidden_field_tag "product_id", @product.id
-  %ul.thumbnails
-    - if @product.photos
-      - @product.photos.each do |p|
-        %li.span2
-          %a.thumbnail{:href => p.file.url, :target => "_blank"}
-            = image_tag p.file(:s)
-          %center
-            %label.btn.btn-mini{:style => "margin: 5px 0 10px 0"}
-              %input{:type => "checkbox", :name => "product_photo_del[]", :value => p.id, :style => "margin:0;padding:0;"}
-              удалить
-            -#%a.btn.btn-mini{:href => "javascript:del_photo(#{p.id});"}
-              удалить
+  .control-group
+    .controls
+      %ul.thumbnails
+        - if @product.photos
+          - @product.photos.each do |p|
+            %li.span2
+              %a.thumbnail{:href => p.file.url, :target => "_blank"}
+                = image_tag p.file(:s)
+              %center
+                %label.btn.btn-mini{:style => "margin: 5px 0 10px 0"}
+                  %input{:type => "checkbox", :name => "product_photo_del[]", :value => p.id, :style => "margin:0;padding:0;"}
+                  удалить
+  .control-group
+    %label.control-label Материалы
+    .controls
+      = hidden_field_tag "product[texture_ids][]", ''
+      %table.table.table-condensed.table-hover
+        - Texture.order("type_id asc").all.each do |t|
+          %tr
+            %td
+              = check_box_tag "product[texture_ids][]", t.id, @product.textures.include?(t)
+            %td
+              = t.name
+            %td
+              #{t.type_id} категория
+            %td
+              %a{:href => t.photo.url}
+                = image_tag t.photo.url(:s)
+
+
+
   .form-actions
     = submit_tag "Сохранить", :name => "save", :class => "btn btn-small btn-primary"
     = submit_tag "Применить", :name => "apply", :class => "btn btn-small btn-info"
