--- a/app/views/admin/_menu.html.haml
+++ b/app/views/admin/_menu.html.haml
@@ -7,9 +7,13 @@
     %a.dropdown-toggle{:href => "/admin"}
       Заказы
 
-  %li.dropdown{:class => ["companies", "categories", "products"].include?(params[:controller].to_s) ? "active" : ""}
+  %li.dropdown{:class => params[:controller] == "categories" ? "active" : ""}
+    %a.dropdown-toggle{:href => "/admin/categories"}
+      Разделы
+
+  %li.dropdown{:class => ["companies", "products"].include?(params[:controller].to_s) ? "active" : ""}
     %a.dropdown-toggle{:href => "/admin/companies"}
-      Каталог
+      Компании
       -#%b.caret
     -#%ul.dropdown-menu
       %li
@@ -24,7 +28,7 @@
       Материалы
 
   %li.dropdown
-    %a.dropdown-toggle{:href => "/special/index"}
+    %a.dropdown-toggle{:href => "/admin/specials"}
       Акции и спецпредложения
 
   %li.search_form.pull-right
