--- a/app/views/admin/categories/edit.html.haml
+++ b/app/views/admin/categories/edit.html.haml
@@ -2,5 +2,5 @@
   .span12
     .block_content.container
       .products_list{:style => "margin:0 20px;"}
-        %h3 Редактирование категрии #{@category.name} в компании #{@company.name}
+        %h3 Редактирование категрии #{@category.name}
         = render "form"
