--- a/app/views/admin/categories/_form.html.haml
+++ b/app/views/admin/categories/_form.html.haml
@@ -1,4 +1,4 @@
-= form_tag params[:id].to_i > 0 ? admin_company_category_path(@company, @category) : admin_company_categories_path(@company), :method => params[:id].to_i > 0 ? "PUT" : "POST", :class => "form-horizontal" do
+= form_tag params[:id].to_i > 0 ? admin_category_path(@category) : admin_categories_path, :method => params[:id].to_i > 0 ? "PUT" : "POST", :multipart => true, :class => "form-horizontal" do
   .control-group
     %label.control-label{:for => "category_name"} Название
     .controls
@@ -7,6 +7,18 @@
     %label.control-label{:for => "category_text"} Описание
     .controls
       = text_area_tag "category[text]", @category.text, :rows => 5
+  .control-group
+    %label.control-label{:for => "category_photo"} Фото
+    .controls
+      = file_field_tag "category[photo]"
+  -#.control-group
+    %label.control-label{:for => "category_delete_photo"} Удалить фото
+    .controls
+      = check_box_tag "category[photo]", 0
+  .control-group
+    .controls
+      %a{:href => @category.photo.url, :target => "_blank"}
+        = image_tag @category.photo.url(:m)
   .form-actions
     = submit_tag "Сохранить", :class => "btn btn-small btn-primary"
-    %a.btn.btn-small{:href => admin_company_categories_path(@company)} Отменить
+    %a.btn.btn-small{:href => admin_categories_path} Отменить
