--- a/app/views/admin/specials/new.html.haml
+++ b/app/views/admin/specials/new.html.haml
@@ -2,5 +2,5 @@
   .span12
     .block_content.container
       .products_list{:style => "margin:0 20px;"}
-        %h3 Создание категории
+        %h3 Создание акции
         = render "form"
